

syntax = "proto3";

package message;

message Message {
  string user = 1;
  string message = 2;
}

message CreateMessageReq {
  Message message = 1;
}

message CreateMessageRes {
  Message message = 1;
}

message GetMessageReq {
  string user = 1;
}

message GetMessageRes {
  Message message = 1;
}

message ListMessageRequest {

}

message ListMessageResponse {
  Message message  = 1;
}

service MessageService {
 rpc CreateMessage (CreateMessageReq) returns (CreateMessageRes);
 rpc GetMessage (GetMessageReq) returns (GetMessageRes);
 rpc ListMessage (ListMessageRequest) returns (stream ListMessageResponse);
}
